# src/dtos/thread.dto.ts
@@ -2,6 +2,7 @@ import { Like, Profile, Thread } from '@prisma/client';
 import { User } from '@prisma/client';
 
 export type CreateThreadDTO = Pick<Thread, 'content' | 'images'>;
+export type UpdateThreadDTO = Pick<Thread, 'content' | 'images'>;
 export type ThreadDTO = Thread & {
   user: User & {
     profile: Profile;
