# src/utils/schemas/thread.schema.ts
@@ -1,7 +1,11 @@
 import Joi from 'joi';
-import { CreateThreadDTO } from '../../dtos/thread.dto';
+import { CreateThreadDTO, UpdateThreadDTO } from '../../dtos/thread.dto';
 
 export const createThreadSchema = Joi.object<CreateThreadDTO>({
+  content: Joi.string().max(280),
+  images: Joi.string(),
+});
+export const updateThreadSchema = Joi.object<UpdateThreadDTO>({
   content: Joi.string().max(280),
   images: Joi.string(),
 });
